CloudFormation-Day-6/outputs/componentization/security-groups/security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: "This templatr provisions webservers and database security group"
Metadata: {}

Parameters: 
  DevWebserverSGGN:
    Description: please provide your Dev web server group name
    Type: String
    Default: DevWebserverSGGN

  DevWebserverSGGD:
    Description: please provide your Dev web server group description
    Type: String
    Default: enabling SSH and HTTP

  DevDBserverSGGN:
    Description: please provide your Dev database server group name
    Type: String
    Default: DevDBserverSGGN

  DevDBserverSGGD:
    Description: please provide your Dev database server group description
    Type: String
    Default: enabling Mysql

  

Mappings: {}

Conditions: {}

Resources:  
  # Webserver Security group
  DevWebserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevWebserverSGGN
      GroupDescription: !Ref DevWebserverSGGD
      VpcId: !ImportValue DevVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevWebserverSG
  # Database security group
  DevDBserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevDBserverSGGN
      GroupDescription: !Ref DevDBserverSGGD
      VpcId: !ImportValue DevVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevDBserverSG
Outputs:
  DevWebserverSGIDExportOutput:
    Description: exporting DevWebserver SG ID
    Value: !Ref DevWebserverSG
    Export: 
      Name: DevWebserverSGID
